--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<h1> This is a Heading </h1> 
+		<h2> This is the second heading </h2>
 		<p> This is a paragraph </p>
 	</body>
 </html>
